<resources>
    <string name="app_name">Call Talent</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <string name="login_activity_signinBtn_text">Signin</string>
    <string name="login_activity_link_to_register_text">New to CallTalent?</string>
    <string name="login_activity_usernameLabel_text">Username</string>
    <string name="login_activity_passwordLabel_text">Password</string>
    <string name="login_activity_rememberMeCheckBox_text">Remember Me</string>
    <string name="login_activity_forgotCredentialsText_text">Fogot?</string>
    <string name="register_activity_repeatPasswordLabel_text">Type Again</string>
    <string name="register_activity_repeatPasswordText_hint">Type your password again</string>
    <string name="login_activity_logo_image_desc">Logo should be here</string>
    <string name="register_activity_linktoSignin_text">Already got an acount?</string>
    <string name="register_activity_registerBtn_text">Register</string>
    <string name="createuserprofile_activity_completeUserProfileBtn_text">Done</string>
    <string name="createuserprofile_activity_addAvatarBtn_text">Add Avatar</string>
    <string name="createuserprofile_activity_showUserProfileBtn_text">Show</string>
    <string name="validation_required_not_met">required field cannot be empty</string>
    <string name="validation_email_not_valid">Email is not valid</string>
    <string name="validation_repeat_password_not_same">The password retyped is not same as password above</string>
    <string name="passwordWrapper_hint">Password</string>
    <string name="usernameWrapper_hint">Username</string>
    <string name="imagedesc">Image</string>
    <string name="user_profile_desc_wrapper_hint">Brief introduction</string>
    <string name="user_profile_name_wrapper_hint">Name</string>
    <string name="user_profile_title_wrapper_hint">Tagline</string>
    <string name="link_to_register_transition" translatable="false">linkToRegisterTransition</string>
    <string name="createuserprofile_activity_gender_male">Gentleman</string>
    <string name="createuserprofile_activity_gender_female">Lady</string>
    <string name="avatar_activity_capture_btn">Capture</string>
    <string name="avatar_activity_save_btn">Save</string>
    <string name="avatar_activity_capture_alternative_btn">Capture Again?</string>
    <string name="avatar_activity_edit_image_btn">edit</string>
    <string name="progress_bar_title_saving">Saving</string>
    <string name="validation_avatar_not_empty">Avatar is not set yet</string>
    <string name="main_activity_bottom_bar_my_btn">Me</string>
    <string name="main.scrolltext" translatable="false">If wandered relation no surprise of screened doubtful. Overcame no insisted ye of trifling husbands. Might am order hours on found. Or dissimilar companions friendship impossible at diminution. Did yourself carriage learning she man its replying. Sister piqued living her you enable mrs off spirit really. Parish oppose repair is me misery. Quick may saw style after money mrs.   Be me shall purse my ought times. Joy years doors all would again rooms these. Solicitude announcing as to sufficient my. No my reached suppose proceed pressed perhaps he. Eagerness it delighted pronounce repulsive furniture no. Excuse few the remain highly feebly add people manner say. It high at my mind by roof. No wonder worthy in dinner.   Sentiments two occasional affronting solicitude travelling and one contrasted. Fortune day out married parties. Happiness remainder joy but earnestly for off. Took sold add play may none him few. If as increasing contrasted entreaties be. Now summer who day looked our behind moment coming. Pain son rose more park way that. An stairs as be lovers uneasy.   Resources exquisite set arranging moonlight sex him household had. Months had too ham cousin remove far spirit. She procuring the why performed continual improving. Civil songs so large shade in cause. Lady an mr here must neat sold. Children greatest ye extended delicate of. No elderly passage earnest as in removed winding or.   Picture removal detract earnest is by. Esteems met joy attempt way clothes yet demesne tedious. Replying an marianne do it an entrance advanced. Two dare say play when hold. Required bringing me material stanhill jointure is as he. Mutual indeed yet her living result matter him bed whence.   Boy desirous families prepared gay reserved add ecstatic say. Replied joy age visitor nothing cottage. Mrs door paid led loud sure easy read. Hastily at perhaps as neither or ye fertile tedious visitor. Use fine bed none call busy dull when. Quiet ought match my right by table means. Principles up do in me favourable affronting. Twenty mother denied effect we to do on.   Bringing so sociable felicity supplied mr. September suspicion far him two acuteness perfectly. Covered as an examine so regular of. Ye astonished friendship remarkably no. Window admire matter praise you bed whence. Delivered ye sportsmen zealously arranging frankness estimable as. Nay any article enabled musical shyness yet sixteen yet blushes. Entire its the did figure wonder off.   Folly words widow one downs few age every seven. If miss part by fact he park just shew. Discovered had get considered projection who favourable. Necessary up knowledge it tolerably. Unwilling departure education is be dashwoods or an. Use off agreeable law unwilling sir deficient curiosity instantly. Easy mind life fact with see has bore ten. Parish any chatty can elinor direct for former. Up as meant widow equal an share least.   Neat own nor she said see walk. And charm add green you these. Sang busy in this drew ye fine. At greater prepare musical so attacks as on distant. Improving age our her cordially intention. His devonshire sufficient precaution say preference middletons insipidity. Since might water hence the her worse. Concluded it offending dejection do earnestly as me direction. Nature played thirty all him.   Drawings me opinions returned absolute in. Otherwise therefore sex did are unfeeling something. Certain be ye amiable by exposed so. To celebrated estimating excellence do. Coming either suffer living her gay theirs. Furnished do otherwise daughters contented conveying attempted no. Was yet general visitor present hundred too brother fat arrival. Friend are day own either lively new.</string>
    <string name="title_activity_user_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
