<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/component_email_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:paddingStart="8dp"
            android:paddingLeft="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:paddingTop="12dp"
            android:paddingBottom="4dp"
            android:src="@drawable/ic_email"
            android:contentDescription="@string/imagedesc" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameWrapper_hint"
            android:paddingLeft="56dp"
            android:paddingStart="56dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp">
            <AutoCompleteTextView
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:paddingRight="56dp"
                android:paddingLeft="56dp"
                android:paddingEnd="32dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="22sp"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/component_password_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_below="@+id/usernameWrapper"
            android:paddingStart="8dp"
            android:paddingLeft="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:paddingTop="12dp"
            android:paddingBottom="4dp"
            android:layout_marginRight="60dp"
            android:contentDescription="@string/imagedesc"
            android:src="@drawable/ic_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameWrapper"
            android:hint="@string/passwordWrapper_hint"
            android:paddingLeft="56dp"
            android:paddingEnd="56dp"
            android:paddingRight="56dp">
            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:paddingRight="56dp"
                android:paddingLeft="56dp"
                android:paddingEnd="32dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="22sp"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/showHidePasswordSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameWrapper"
            android:layout_alignRight="@+id/passwordWrapper"
            android:paddingTop="24dp" />

        <!-- Signin Button Start -->
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/signinBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordWrapper"
            android:gravity="center"
            android:text="@string/login_activity_signinBtn_text" />
        <!-- Signin Button Ends -->

        <TextView
            android:id="@+id/forgotCredentialsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordWrapper"
            android:layout_alignRight="@+id/signinBtn"
            android:layout_centerVertical="true"
            android:text="@string/login_activity_forgotCredentialsText_text" />

        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotCredentialsText"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_activity_link_to_register_text"
            android:textColor="@color/primary_dark"
            android:textSize="20sp" />

        <!-- Footer Start -->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="130dip"
            android:layout_alignParentBottom="true"
            android:background="@drawable/login_footer_repeat"
            android:orientation="vertical" />
        <!-- Footer Ends -->
    </RelativeLayout>
</ScrollView>
