<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flexWrap="wrap"
    app:alignItems="flex_start"
    app:alignContent="flex_start"
    app:justifyContent="center">
    <ImageView
        android:id="@+id/component_email_icon"
        android:layout_width="@dimen/icon_label_size"
        android:layout_height="@dimen/icon_label_size"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_email"
        android:contentDescription="@string/imagedesc"
        app:layout_alignSelf="stretch"
        app:layout_minWidth="@dimen/icon_label_size" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usernameWrapper_hint"
        app:layout_alignSelf="auto"
        app:layout_minWidth="260dp"
        app:errorTextAppearance="@color/accent">
        <AutoCompleteTextView
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_button_size"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:layout_width="@dimen/icon_label_size"
        android:layout_height="@dimen/icon_label_size"
        android:contentDescription="@string/imagedesc"
        android:src="@drawable/ic_password"
        app:layout_alignSelf="stretch"
        app:layout_wrapBefore="true"
        app:layout_minWidth="@dimen/icon_label_size" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_minWidth="222dp"
        app:layout_alignSelf="stretch"
        android:hint="@string/passwordWrapper_hint"
        app:errorTextAppearance="@color/accent">
        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_button_size"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/showHidePasswordSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_minWidth="@dimen/switch_min_width"
        app:layout_alignSelf="center" />

    <ImageView
        android:id="@+id/component_repeat_password_icon"
        android:layout_width="@dimen/icon_label_size"
        android:layout_height="@dimen/icon_label_size"
        android:contentDescription="@string/imagedesc"
        android:src="@drawable/ic_password"
        app:layout_alignSelf="stretch"
        app:layout_wrapBefore="true"
        app:layout_minWidth="@dimen/icon_label_size"
        android:visibility="gone" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/repeatPasswordWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_minWidth="266dp"
        app:layout_alignSelf="stretch"
        android:hint="@string/passwordWrapper_hint"
        app:errorTextAppearance="@color/accent"
        android:visibility="gone">

        <EditText
            android:id="@+id/repeatPasswordText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_button_size"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

</com.google.android.flexbox.FlexboxLayout>